--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-PyQt5~=5.14.2
-pandas~=1.0.5
-networkx~=2.4
-matplotlib~=3.2.2
-setuptools~=46.4.0
-pyodbc~=4.0.30
+PyQt>=5.9.2
+pandas>=1.0.5
+networkx>=2.4
+matplotlib>=3.2.2
+setuptools>=46.4.0
+pyodbc>=4.0.30
